package interfaces;

public interface RegistroFuncionario {

    void selecionarFuncao();

    void baterPontoEntrada();

    void baterPontoSaida();
}
